# thread-lens

./: .gitignore  Cargo.toml  Dockerfile.test  LICENSE-CLI.md  PROJECT.md  README.md  index.html  thread_analyzer
java-lab/: Dockerfile  Dockerfile.ibm17  (+14 more)
thread-lens/: Cargo.toml  LICENSE-COMMERCIAL.md  LICENSE-GPLv3.md
thread-lens/src/: analyzer.rs  lib.rs  models.rs
thread-lens/src/parser/: ibm.rs  jvm_vendor.rs  mod.rs  openjdk.rs  test_ibm_frames.rs  tests.rs
thread-lens/src/test_data/: minimal_ibm_app_thread.jstack
thread-lens/src/test_data/java-app-ibm17_20250920204228_block/: java-app-ibm17_20250921034228352.jstack  java-app-ibm17_20250921034233687.jstack  java-app-ibm17_20250921034238851.jstack  java-app-ibm17_20250921034244040.jstack  java-app-ibm17_20250921034249237.jstack  java-app-ibm17_20250921034254420.jstack  java-app-ibm17_20250921034259603.jstack  java-app-ibm17_20250921034304799.jstack  java-app-ibm17_20250921034310002.jstack  java-app-ibm17_20250921034315206.jstack
thread-lens/src/test_data/java-app-ibm17_20250920204228_deadlock/: java-app-ibm17_20250921034329072.jstack  java-app-ibm17_20250921034334495.jstack  java-app-ibm17_20250921034339694.jstack  java-app-ibm17_20250921034344929.jstack  java-app-ibm17_20250921034350129.jstack  java-app-ibm17_20250921034355313.jstack  java-app-ibm17_20250921034400488.jstack  java-app-ibm17_20250921034405698.jstack  java-app-ibm17_20250921034410904.jstack  java-app-ibm17_20250921034416066.jstack
thread-lens/src/test_data/java-app-openjdk11_20250920203012_block/: java-app-openjdk11_20250921033013103.jstack  (+9 more)
(+101 files in other folders)
