[package]
name = "thread-lens"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
regex = "1.10.2"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
env_logger = "0.10.0"

[lib]
crate-type = ["cdylib", "rlib"]
